--- a/src/main/resources/fxml/teamScreen.fxml
+++ b/src/main/resources/fxml/teamScreen.fxml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
-
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <children>
@@ -25,7 +25,11 @@
       <Label fx:id="draws" layoutX="198.0" layoutY="310.0" text="Label" />
       <Label layoutX="119.0" layoutY="347.0" text="Przegrane" />
       <Label fx:id="loses" layoutX="205.0" layoutY="347.0" text="Label" />
-      <VBox fx:id="footbalersVBox" layoutX="367.0" layoutY="114.0" prefHeight="254.0" prefWidth="100.0" />
-      <Label layoutX="417.0" layoutY="69.0" text="Pilkarze" />
+      <VBox fx:id="footbalersVBox" layoutX="317.0" layoutY="114.0" prefHeight="254.0" prefWidth="100.0" />
+      <Label layoutX="342.0" layoutY="93.0" text="Pilkarze" />
+      <Button fx:id="supportButton" layoutX="71.0" layoutY="39.0" mnemonicParsing="false" onAction="#support" text="Kibicuj" />
+      <Button fx:id="stopSupportButton" layoutX="427.0" layoutY="39.0" mnemonicParsing="false" onAction="#stopSupport" text="Przestań kibicować" />
+      <Label layoutX="474.0" layoutY="93.0" text="Kibice" />
+      <VBox fx:id="fansVBox" layoutX="449.0" layoutY="141.0" prefHeight="200.0" prefWidth="100.0" />
    </children>
 </Pane>
